package br.com.ajf.learnjavadesignpatterns.factory;

public interface Color
{
	void fill();
}
