package br.com.ajf.learnjavadesignpatterns.factory;

public class White implements Color
{

	@Override
	public void fill()
	{
		System.out.println("White Color");
	}
}
